<resources>
    <string name="app_name">排列3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="hello_blank_fragment">Hello blank mFragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="actionbar_search">搜索</string>
    <string name="actionbar_more">更多信息</string>
    <string name="actionbar_share">分享给朋友\(^o^)/~</string>
    <string name="github_issues">您可以将您的问题发送至邮箱，我们收到将会尽量处理您的问题 ~</string>
    <string name="string_about">由于网易云音乐用了很久，特别喜爱它的界面风格，所以仿写了它的UI。如构成侵权请及时通知我修改或删除。
        \n\n 大部分数据使用的是代码家的https://gank.io和豆瓣APIV2.0，一切数据解释权都归代码家和豆瓣所有。
        \n\n 干货每日推荐内容缓存三天，每天12：30更新，如没有内容则取缓存。电影热映榜每日零点更新。
        \n\n 整体采用Retrofit+RxJava+MvvM-DataBinding框架。
        \n\n 我的GitHub：https://github.com/youlookwhat
        \n\n 项目完全开源，如果你觉得不错，请帮忙Star一下吧，或帮忙分享给你的朋友，这是给我们最大的动力与支持，非常感谢！
        </string>
    <string name="string_about_me">
        Email: | ffcai@yeah.net
    </string>
    <string name="string_introduction">
        排列3是一家为用户提供最新彩票资讯和模拟选号的公司和平台。
        \n我们拥有完善的治理机制，专业化的管理团队。
        \n拥有人性化的服务平台和彩票知识展示最好的资讯服务平台，为客户提供个性化产品和服务。
    </string>
    <string name="string_introduction2">
        我们提供最新的彩票资讯
        \n\n发布最新的开奖信息
        \n\n我们拥有完善的治理机制，专业化的管理团队。
        \n\n为客户提供个性化产品和服务。
    </string>
    <string name="string_lib">
    1、彩票资讯——提供最新的彩票资讯
    \n2、专家推荐——彩票专家为您提供彩票推荐与分析
    \n3、领先的彩票分析
    \n4、将上新以下内容
        \n彩票论坛——彩名信息咨询交互和娱乐平台社区
    \n名人堂——彩票名人的天地
    </string>
    <string name="string_url_cloudreader">https://github.com/youlookwhat/CloudReader</string>
    <string name="string_url_new_version">https://fir.im/cloudreader</string>
    <string name="string_url_issues">https://github.com/youlookwhat/CloudReader/issues</string>
    <string name="string_url_jianshu">http://www.jianshu.com/users/e43c6e979831/latest_articles</string>
    <string name="string_url_gankio">http://gank.io/api</string>
    <string name="string_url_douban">https://developers.douban.com/wiki/?title=terms</string>
    <string name="string_everyday_empty">暂时没有更新内容，去看看其他信息吧~</string>
    <string name="string_share_text">排列3是最值得信赖的专业彩票帮助网站,为彩民提供排列33D,双色球,大乐透,排列五等服务帮助,后期更有足彩,竞彩,北单等众多彩种的彩票服务</string>
    <string name="no_name">佚名</string>
    <string name="string_rating">评分：</string>
    <string name="string_rating_num">人评分</string>
    <string name="string_type">类型：</string>
    <string name="string_publisher">出版社：</string>
    <string name="login_out">再按一次退出排列3</string>
    <string name="ui_get_verifycode">获取验证码</string>
    <string name="ui_input_your_verifycode">请输入验证码</string>
    <string name="ui_SMS_verifyCode">短信验证码</string>
    <string name="verifyCode">验证码</string>
    <string name="ui_count_prompt">(%d秒后)重新获取</string>
    <string name="ui_count_prompt2">%d秒</string>
    <string name="again_send">重新获取</string>
    <string name="register">立即注册</string>
    <string name="modifyPwd">修改密码</string>
    <string name="login">登录</string>
    <string name="password">登录密码</string>
    <string name="new_password">新密码</string>
    <string name="password_rule">6-15位数字字母组合</string>
    <string name="phone_number">手机号码</string>
    <string name="username">用户名</string>
    <string name="input_username">请输入您的用户名</string>
    <string name="input_your_number">请输入手机号码</string>
    <string name="input_your_username">请输入用户名</string>
    <string name="username_rule">用户名只支持字母,数字,下划线</string>
    <string name="number_input_error">请输入正确的11位手机号码</string>
    <string name="input_your_password">请输入您的密码</string>
    <string name="input_your_password_error">请输入6-15位密码</string>
    <string name="login_success">登录成功</string>
    <string name="password_is_too_simple">登录密码过于简单，至少包含英文字母、数字和字符中的两种</string>
    <string name="plat_register_success">注册成功</string>
    <string name="plat_audio_login">您已成功注册拉卡拉收款宝\n正在自动登录,请稍后...</string>
    <string name="please_check_agreen">请查看并同意协议</string>
    <string name="plat_set_success">设置成功</string>
    <string name="plat_skip">跳过</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="input_correct_verifycode">请输入正确的验证码</string>
    <string name="password_rule_digits">asdfghjklzxcvbnmqwertyuiopASDFGHJKLZXCVBNMQWERTYUIOP1234567890</string>
    <string name="verifycode_failed">获取验证码失败</string>
    <string name="verifycode_repeat">10分钟不能重复发送</string>
    <string name="params_exception">参数异常</string>
    <string name="fragment_purchase_title">排列3</string>
    <string name="fragment_discover_title">排列3</string>
    <string name="fragment_user_title">排列3</string>
    <string name="rank_five">排列五</string>
    <string name="kuaisan">快三</string>
    <string name="daletou">大乐透</string>
    <string name="qixingcai">七星彩</string>
    <string name="qilecai">七乐彩</string>
    <string name="kuailecai">快乐彩</string>
    <string name="fucai">福彩快3</string>
    <string name="shiyixuanwu">排列3</string>
    <string name="double_color">双色球</string>
    <string name="lottery_draw">开奖</string>
    <string name="play_method">玩法</string>
    <string name="play_method_doublecolor">
            双色球是一种大盘玩法游戏，由中国福利彩票发行管理中心统一组织发行，在全国范围内销售。
        \n  双色球投注区分为红球号码区和蓝球号码区，红球号码范围为01～33，蓝球号码范围为
        \n01～16。双色球每期从33个红球中开出6个号码，从16个蓝球中开出1个号码作为中奖
        \n号码，双色球玩法即是竞猜开奖号码的6个红球号码和1个蓝球号码，顺序不限
        \n\n
        投注方式
        1、标准投注 从红球号码中选择6个号码，从蓝球号码中选择1个号码为一注，红球最多可选20个号码，蓝球最多可全选。单注最高奖金可达1000万元。
        \n2、胆拖投注 在33个红球号码中选择1～5个号码作为每注都有的胆码，再补充其它不同的红球号码作为拖码进行投注，蓝球无胆码和拖码之分。单注最高奖金可达1000万元。
        \n3、单式上传 将固定格式的单式号码统一上传给系统进行投注。此投注方式对于将过滤软件过滤出的单式号码统一投注十分方便。
        \n\n
        购买方式
        \n1、代购-代购指用户进行网上选号发起方案，并认购全部份额，然后委托彩票网站代为购买彩票。
        \n2、合买-合买是由两个或者两个以上用户共同出资购买彩票，按照出资比例承担风险、分享利益的投注方式。合买有解决个人投注资金不足、分散投资风险、提高中奖概率等诸多优势，因此深受广大用户青睐。
        \n3、追号-追号指将一注或一组号码进行两期或两期以上的投注。追号可分为连续追号和间隔追号，连续追号指追号的期数是连续的，间隔追号指追号的期数不连续。
</string>
    <string name="play_method_rankfive">
        “排列5” 是体彩的一种，从00000-99999的数字中选取1个5位数为投注号码进行投注 “排列5”设1个奖级，为固定奖，所选号码与中奖号码全部相同且顺序一致则为中奖。
        \n例如：中奖号码为43751，则排列5的中奖结果为：43751。单注固定奖金100000元。
        \n购买“排列5”时，由购买者从00000-99999的数字中选取1个5位数为投注号码进行投注。
        \n 购买者可在全国各省（区、市）体育彩票管理中心设置的投注站进行投注。投注号码可由投注机随机产生，也可通过投注单将购买者选定的号码输入投注机确定。投注号码经系统确认后打印出的兑奖凭证即为“排列5”电脑体育彩票，交购买者保存。
        \n“排列5”每注2元人民币。彩票不记名、不挂失，不返还本金，不流通使用。
        选号方式分为：
        \n奇偶大小选号~~
        \n①奇2偶1大2小：1212形式（组3和组6号码一起30注） 005 007 009 225 227 229 445 447 449016 018 025 027 029 036 038 045 047 049 126 128 146 148 236 238 245 247 249 346 348 2
        \n②奇1偶2大1小：2121形式（组3和组6号码30注） 550 552 554 770 772 774 990 992 994 057 059 079 156 158 167 169 178 189 257 259 279 356 358 367 369 378 389 457 459 479 其中百位个位奇偶同步也是重点注意的。
        \n大中小选号法~~
        \n大中小类型最常见的类型是1大1中1小即789/3456/012之组选36注,直选216注。其中大中小组和:012/3456/789共计216注直选(36注组选)理论4.6天中出一次,实际平均4-5天中出一次。另外重点注意大中小组合和值范围只有10-17点。
        \n和值选号法~~
        \n正常和值~~
        \n9、10、11、12、13、14、15、16其中9、10、11、13、16为重点最易出现的; 不正常和值重点是5、6、7、17、18、19、20等等
    </string>
    <string name="play_skill_pls">
      \n看图法
        \n通过对快三的组选图或三个位置的分位走势图进行观察分析，从而找出备选号码进行投注的方法。看图法比较直观、简单，适合于各年龄段、各种文化层次的彩民使用。通过组选图可以观察号码的遗传与斜连特征，从而寻找合适的胆码；通过分位图，可以利用历史数据，观察号码的对称或非对称特征，再根据相似性原理，确定每个位置的高概率号码等。但不管怎样去看图，看图者本人的主观感觉对于中奖率的高低起决定性作用，图形走势上并没有确定的规律性可言。
    \n绝对差值法
        \n  相邻奖号绝对差值的和尾可排除，本期中奖号码与上期中奖号码按位相减绝对值的相加之尾下期可排除。
    \n胆拖组选法
        \n  组选3复式包号投注法组选3号码占所有号码的27%，从计算概率上讲四期左右就要开出一次组选3号码。当连续多期未开出组选3号码时，可及时跟进投注组选3，当然彩民可以根据经济情况排除部分号码进行投注，收益更可观。由于以任意一个号码为“胆”的彩票选号器号码共有55注，其中有1注直选的“三同”，18注组选3和36注组选6号码。通过分析开奖号码，选定一个 “胆”，采用“胆拖”组选方式投注，只要开奖号码有“胆”，即可中奖。
    \n和值投注法
        \n  彩票选号器的投注号码是由0-9十个数字组成的三位数号码，三个数字相加之和称为和值，和值有效投注范围为0-27，共28个投注值。投注时通过跟踪分析，把选定的和值包含的所有号码进行投注，为了减少风险和资金压力，可先组选，投注几期后改直选，既可节约资金又可达盈利目的。
    \n形态投注法
        \n  这个是对以往数据的分析产生的，把号码分组，对彩票选号器开奖号码三位数的大小、单双等组合形态进行分析跟踪，由于大小、单双形态分别都只有八种形态，即大小形态有小小小、小小大、小大小、大小小、大小大、大大小、小大大、大大大；单双形态有双双双、双双单、双单双、单双双、单单单、单单双、单双单、双单单。每种形态8期为一周期，跟踪彩票选号器开奖号码，当某两种形态已有2-3个周期未开出，可适时跟进。彩民还可以通过自己的分析和判断，选择不同组合进行投注，如两中加一大的组合。
    \n定位投注法
        \n  根据彩票选号器的历史开奖数据，统计在一、二、三位之上某个长期未开出的号码为胆码，其余两位0-9进行全包，称为定1包2，若确定某两个位置的号码为胆码，其余一位0-9进行全包，称为定2包1。
    \n特殊号码法
        \n  特殊号码法指利用生日日期、身份证号码、信用卡号码、手机号码OICQ（QQ）号码、车牌号码、结婚纪念日、幸运号码和其他纪念日中的部分（其实是3个）号码作为投注号码。采用特殊号码投注，不仅便于彩民记忆，同时也赋予每天的平淡生活更多的乐趣和人情味。
\   n首尾杀号法
        \n  “首尾边距”杀号法定义：即先得出彩票选号器三个奖号中的最大码与最小码的差值，再把彩票选号器可选的最大号码“9”减去首尾边距值，所得的数值即为要杀的号码，特点就是通过上期的开奖号码预测下期必杀号码，“当期号码上期杀”。“首尾边距”杀号法举例说明：例如第100期的开奖号码是549，把 9-5=“4”（首尾边距值），再用9-4=“5”，“5”就是预测第101期必杀的码。
    \n和值杀号法
        \n  “开奖号码和值”杀号法定义：即通过上期开奖号码的“和”来预测下期必杀码。如第110期的奖号是851，把851变为8+5+1=14（和数值），再把14变为1+4=“5”，再用 9-5=“4”，而“4”就是我们预测第111期必杀的号码。入市有风险，投资需谨慎。以上供参考，保持良好心态是关键。
    \n数值推断法
        \n  判断和数值范围是基础。根据和数值走势确定下期和数值出现范围，然后列出点位的号码组合进行筛选，去掉出现概率较低的号码，选出可能性较高的号码投注。一般而言，判断和数值走势以±1点、±2点法为主，如果将和数值范围过分扩大，投注成本会较高。在确定和值范围时要注意以下问题：1．根据和数值历史走势，确定下一期的和数值范围；2．要充分把握和数值走势的若干特征，如和数值围绕中心值13点上下波动，当和数值处于较低的点位时，都会引发下期强劲的反弹，而当和值处于中心值附近时，一般情况下变化幅度不大。
    \n位差分析法
        \n  位差指的是个十百位三个号位上的其中一个号位上的号码与另一个号位上的号码相减的差。即有“百位减十位”、“百位减个位”、“十位减个位”三种数据可供分析。对于快三位差的分析，除了考察某一冷和值外，还要考察和值的冷距离或冷跨度。可以用以下三个词来总结：点、跳、平。
        \n点：即冷点，比如十位减个位等于1已连续多天未出现了，我们可以密切关注这个差值。当然，在关注在数的同时，重点是要结合它们的不同的出号周期。比如十位减个位等于1与十位减个位等于3如果同时冷到50天未出，则前者就成了必追之冷，而后者却只能作为观望指标，远远未达到追捧的时候。
        \n跳：即点位距离的冷态。比如十位减个位的差距离已连续多天未出现距离为1的情况，而如果本期和值为5，下期即可关注差值为4或为6。
        \n平：即重复点位。一般情况下，任意两个号位的差平均每十天左右就会重复一次，如果某两个号位上的差连续40天未发生重复现象时，我们就可以采取出几追几的方案。
    </string>
</resources>