<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/container_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:background="@color/white"
            android:id="@+id/linearLayout_account_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/common_size_10"
                    android:paddingRight="@dimen/common_size_10"
                    android:text="@string/username"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/font_size_17" />

                <EditText
                    android:id="@+id/username_edit"
                    style="@style/combination_right_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/tv_username"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/input_username"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/common_size_10"
                    android:textSize="@dimen/font_size_17" />
            </RelativeLayout>

            <View style="@style/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/common_size_10"
                    android:paddingRight="@dimen/common_size_10"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/font_size_17" />

                <EditText
                    android:id="@+id/phone_edit"
                    style="@style/combination_right_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/tv_phone"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/input_your_number"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/common_size_10"
                    android:textSize="@dimen/font_size_17" />
            </RelativeLayout>


            <View style="@style/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/common_size_10"
                    android:paddingRight="@dimen/common_size_10"
                    android:text="@string/password"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/font_size_17" />

                <EditText
                    android:id="@+id/password_edit"
                    style="@style/combination_right_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/tv_password"
                    android:digits="@string/password_rule_digits"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/password_rule"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/common_size_10"
                    android:textSize="@dimen/font_size_17" />
            </RelativeLayout>


            <View style="@style/line" />

            <com.mrice.txl.appthree.view.CountdownInputBoxView
                android:id="@+id/countdown_inputbox"
                style="@style/combination_right_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:paddingLeft="@dimen/combination_text_edit_margin_left"
                android:visibility="visible" />

            <View style="@style/line" />

        </LinearLayout>


        <Button
            android:id="@+id/register"
            style="@style/style_commont_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/register" />


    </LinearLayout>


</layout>